[gd_scene load_steps=3 format=3 uid="uid://cyfwx2chmt82i"]

[ext_resource type="Script" uid="uid://65yhursyacwe" path="res://ui/game/hud/loot_hud.gd" id="1_784ee"]
[ext_resource type="PackedScene" uid="uid://bhgl2a5rnu6k7" path="res://ui/game/hud/SharedTooltipPanel.tscn" id="2_4g0os"]

[node name="LootHUD" type="CanvasLayer"]
script = ExtResource("1_784ee")

[node name="TooltipPanel" parent="." instance=ExtResource("2_4g0os")]
z_index = 50

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(260, 360)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 420.0
offset_top = -304.0
offset_right = 680.0
offset_bottom = 54.0
grow_vertical = 2

[node name="Title" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_right = 45.0
offset_bottom = 23.0
text = "loot"

[node name="Scroll" type="ScrollContainer" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 240.0
offset_bottom = 290.0

[node name="Grid" type="GridContainer" parent="Panel/Scroll"]
custom_minimum_size = Vector2(210, 230)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5

[node name="LootSlot0" type="Panel" parent="Panel/Scroll/Grid"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="Row" type="HBoxContainer" parent="Panel/Scroll/Grid/LootSlot0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="Panel/Scroll/Grid/LootSlot0/Row"]
custom_minimum_size = Vector2(40, 40)
size_flags_vertical = 4
expand_mode = 2
stretch_mode = 5

[node name="Name" type="RichTextLabel" parent="Panel/Scroll/Grid/LootSlot0/Row"]
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
fit_content = false
scroll_active = false
autowrap_mode = 0
text_overrun_behavior = 3
clip_text = true

[node name="Count" type="Label" parent="Panel/Scroll/Grid/LootSlot0/Row"]
size_flags_vertical = 4
autowrap_mode = 0
text_overrun_behavior = 3
clip_text = true

[node name="TakeButton" type="Button" parent="Panel/Scroll/Grid/LootSlot0/Row"]
custom_minimum_size = Vector2(60, 40)
size_flags_vertical = 4
text = "Take"


[node name="LootAllButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 300.0
offset_right = 240.0
offset_bottom = 340.0
text = "loot all"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 180.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 41.0
text = "close"
